still attempting to fix the readability of the header

--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,6 @@ h1, p {
   color: green;
   background-color: rgba(128, 128, 128, 0.75);
   padding: 10px;
-  display: inline-block;
 }
 
 h1 {
